# VeriChunk

./: .gitignore  .mcp.json  .mcp.json.example  LICENSE  README.md  document-splitter-agent-design(2).md  package-lock.json  package.json  pyproject.toml  server.js
.github/workflows/: ci.yml  normalize-lock.yml  refresh-lock.yml
backups/: SNAPSHOT-v0.1.0-pre-pdf-output.md
docs/baseline/: golden-results.json  phase-0.md
docs/phase-1/: golden-results.json  phase-1.md
docs/phase-2/: golden-results.json  phase-2.md
docs/phase-3/: phase-3.md
docs/phase-4/: golden-results.json  phase-4.md
docs/phase-5/: phase-5.md
mcp/: cli-runner.js  reviewer-args.js
scripts/: audit-golden-corpus.py  generate-golden-corpus.py  install-mcp.sh
src/doc_splitter/: __init__.py  cli.py  config.py  format_detector.py  index_generator.py  markdown_codec.py  naming.py  orchestrator.py  repair.py  section_titles.py  semantic.py  storage.py  structure_analyzer.py  topic_reviews.py  verifier.py  workflow.py  writer.py
src/doc_splitter/agents/: __init__.py  backend.py  provider_backends.py  scheduler.py
src/doc_splitter/boundary/: __init__.py  planner.py  safe_candidates.py
src/doc_splitter/boundary/prompts/: boundary.md
src/doc_splitter/content/: __init__.py  analyzer.py
src/doc_splitter/content/prompts/: content.md
src/doc_splitter/index/prompts/: index.md
src/doc_splitter/ir/: models.py  serialize.py
src/doc_splitter/parsers/: __init__.py  _ids.py  docx_parser.py  pdf_opendataloader.py  pdf_pipeline.py  pdf_pymupdf.py  reconciler.py
src/doc_splitter/writers/: __init__.py  markdown_writer.py  pdf_writer.py
test/: cli-runner.test.js  reviewer-args.test.js
tests/: test_agent_scheduler.py  test_boundary_planner.py  test_cli_config.py  test_content_analyzer.py  test_golden_corpus.py  test_index_generator.py  test_ir.py  test_naming.py  test_page_policy.py  test_page_ranges.py  test_parsers.py  test_pdf_writer.py  test_provider_backends.py  test_repair_loop.py  test_safe_candidates.py  test_section_titles.py  test_semantic_engine.py  test_semantic_workflow_e2e.py  test_verifier.py  test_workflow_safety.py
tests/fixtures/: sample_ir.json
tests/golden/: README.md  corpus.json
tests/golden/ir/: continuous_topic_17_pages.json  continuous_topic_25_pages.json  early_topic_change_before_minimum.json  image_on_topic_boundary.json  subheading_same_topic.json  table_on_topic_boundary.json  topic_change_with_heading.json  topic_change_without_heading.json
tests/golden/source/: list-and-standalone-image.docx
