[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-splitter"
version = "0.3.0"
description = "Conceptual document splitter with MCP and CLI interfaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24,<2",
    "pymupdf4llm>=1.27.2.3,<2",
    "opendataloader-pdf>=1.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
doc-splitter = "doc_splitter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_splitter"]

[tool.hatch.build.targets.wheel.force-include]
"src/doc_splitter" = "doc_splitter"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
