[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "doc-splitter"
version = "0.5.0"
description = "VeriChunk: verified semantic document chunking with CLI and MCP interfaces"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["documents", "pdf", "docx", "mcp", "semantic-splitting", "verification", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
]
dependencies = [
    "pymupdf>=1.24,<2",
    "pymupdf4llm>=1.27.2.3,<2",
    "opendataloader-pdf>=1.0.0",
    "onnxruntime>=1.23.2,<1.24; python_version < '3.11'",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
openai = ["openai>=2.45,<3"]
anthropic = ["anthropic>=0.116,<1"]
agents = [
    "openai>=2.45,<3",
    "anthropic>=0.116,<1",
]
dev = [
    "build>=1.2,<2",
    "hatchling>=1.27,<2",
    "mypy>=1.17,<2",
    "pytest>=8,<10",
    "ruff>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/alifazelidehkordi/verichunk"
Repository = "https://github.com/alifazelidehkordi/verichunk"
Issues = "https://github.com/alifazelidehkordi/verichunk/issues"

[project.scripts]
verichunk = "doc_splitter.cli:main"
doc-splitter = "doc_splitter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_splitter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["docs/baseline", "docs/phase-1", "docs/phase-2", "docs/phase-3"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src/doc_splitter"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
follow_imports = "skip"
